--- a/jfxShopping/css/page/userinfo.css
+++ b/jfxShopping/css/page/userinfo.css
@@ -198,6 +198,23 @@
     opacity: .9;
     top: -5px;
 }
+#change button{
+    width: 100%;
+    max-width: 340px;
+    background: #000;
+    color: #fff;
+    border: 0;
+    position: relative;
+    top: 0;
+    cursor: pointer;
+    transition: all .5s;
+    font-size: .75rem;
+    padding: 24px 0;
+}
+#change button:hover{
+    opacity: .9;
+    top: -5px;
+}
 @media (min-width: 576px) {
     .modal-dialog {
         max-width: 60%;
